salesforce_sfdx/main/default/objects/Principal__c/Principal__c.object-meta.xml
<CustomObject>
    <label>Principal</label>
    <nameField>
        <label>Entidad / Cargo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Principales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>