salesforce_sfdx/main/default/objects/Principal__c/fields/Contacto_Existente__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Existente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Si el contacto existe en dicho objeto se puede relacionar a dicho registro</description>
    <inlineHelpText>Puede relacionar esta persona a un contacto existente</inlineHelpText>
    <label>Contacto Existente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Principales</relationshipLabel>
    <relationshipName>Principales</relationshipName>
    <type>Lookup</type>
</CustomField>