salesforce_sfdx/main/default/objects/Principal__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <description>Correo electrónico de la persona</description>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>