salesforce_sfdx/main/default/objects/Principal__c/fields/Manager_One_Engie__c.field-meta.xml
<CustomField>
    <fullName>Manager_One_Engie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este usuario corresponde al Manager One ENGIE del Principal.</description>
    <inlineHelpText>Establezca el usuario que actúa como Manager de este Principal</inlineHelpText>
    <label>Manager One Engie</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Principales</relationshipName>
    <type>Lookup</type>
</CustomField>