salesforce_sfdx/main/default/objects/Principal__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <description>Stakeholder relacionado de la Persona</description>
    <label>Stakeholder</label>
    <referenceTo>Stakeholder__c</referenceTo>
    <relationshipLabel>Principales Personas</relationshipLabel>
    <relationshipName>Principales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>